--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     timeout-minutes: 30
     strategy:
       matrix:
-        go: ['1.13.5']
+        go: ["1.13.5"]
         os: [ubuntu-latest, macOS-latest, windows-latest]
     name: Go ${{ matrix.go }} test in ${{ matrix.os }}
     steps:
@@ -32,18 +32,28 @@ jobs:
         run: make build
 
       # after success
-#      - name: Coverage
-#        if: startsWith(matrix.os, 'ubuntu')
-#        run: |
-#          go get golang.org/x/tools/cmd/cover
-#          go get github.com/mattn/goveralls
-#          /home/runner/go/bin/goveralls -coverprofile=coverage.out -service=github-action -repotoken ${{ secrets.COVERALLS_TOKEN }}
+      #      - name: Coverage
+      #        if: startsWith(matrix.os, 'ubuntu')
+      #        run: |
+      #          go get golang.org/x/tools/cmd/cover
+      #          go get github.com/mattn/goveralls
+      #          /home/runner/go/bin/goveralls -coverprofile=coverage.out -service=github-action -repotoken ${{ secrets.COVERALLS_TOKEN }}
+      - uses: actions/upload-artifact@v1
+        if: runner.os == 'linux'
+        with:
+          name: bin
+          path: ./bin
+
   release:
     name: Release to Github
     if: startsWith(github.ref, 'refs/tags/') && github.repository == 'axetroy/dvs'
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/download-artifact@v1
+        with:
+          name: bin
+
       - uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
